sr/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AccountAffiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hear_About_Other__c</fullName>
        <label>Hear About Other</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hear_About__c</fullName>
        <label>Hear About</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HearAbout</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Age_Range_0_5_years_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if SR team includes 0-5 year olds</inlineHelpText>
        <label>SR Age Range 0 - 5 years old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Age_Range_12_14_years_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if SR team includes 12-14 year olds.</inlineHelpText>
        <label>SR Age Range 12 - 14 years old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Age_Range_15_17_years_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if SR team includes 15-17 year olds</inlineHelpText>
        <label>SR Age Range 15 - 17 years old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Age_Range_18_years_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if SR team includes 18+ year olds</inlineHelpText>
        <label>SR Age Range 18+ years old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_City__c</fullName>
        <label>SR_City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Country__c</fullName>
        <label>SR_Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_FormData__c</fullName>
        <label>SR FormData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SR_Number_of_Items__c</fullName>
        <description># of Items Collected</description>
        <inlineHelpText># of Items Collected</inlineHelpText>
        <label>SR Number of Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SR_Number_of_Young_People__c</fullName>
        <description># of Young People</description>
        <inlineHelpText># of Young People</inlineHelpText>
        <label>SR Number of Young People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SR_Opt_Out_Newsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SR Opt-Out Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_PDF_FormData__c</fullName>
        <label>SR PDF FormData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SR_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Result</label>
        <referenceTo>SR_Result_Old__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SR_RoleList__c</fullName>
        <label>Team Leader Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Role__c</fullName>
        <inlineHelpText>Role this person plays within a Students Rebuild Challenge Team.</inlineHelpText>
        <label>Team Leader Role Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_State_Province__c</fullName>
        <label>SR State Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatesProvinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Team_Name__c</fullName>
        <label>SR Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taken_Students_Rebuild_Challenge_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if they have taken a students rebuild challenge before</inlineHelpText>
        <label>Taken Students Rebuild Challenge Before?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>